content/influxdb/v0.9/administration/logs.md
---
title: Logs
aliases:
  - /docs/v0.9/concepts/logs.html
menu:
  influxdb:
    weight: 10
    parent: administration
  products:
    parent: influxdb
---

InfluxDB writes log output, by default, to `stderr`. Depending on your use case, this log information can be written to another location.

## Running InfluxDB directly

If you run InfluxDB directly, using `influxd`, all logs will be written to `stderr`. You may redirect this log output as you would any output to `stderr` like so:

```sh
influxd 2>$HOME/my_log_file
```

## Launched as a service

If InfluxDB was installed using a pre-built package, and then launched as a service, `stderr` is redirected to `/var/log/influxdb/influxd.log`, and all log data will be written to that file. You can override this location by setting the variable `STDERR` in the file `/etc/default/influxdb`.

For example, if `/etc/default/influxdb` contains:

```sh
STDERR=/dev/null
```

all log data will be discarded. You can similarly direct output to `stdout` by setting `STDOUT` in the same file. Output to `stdout` is sent to `/dev/null` by default when InfluxDB is launched as a service.

InfluxDB must be restarted to pick up any changes to `/etc/default/influxdb`.

## Using logrotate

You can use [logrotate](http://manpages.ubuntu.com/manpages/hardy/man8/logrotate.8.html) to rotate the log files generated by InfluxDB. If using the package install, the config file for logrotate is installed in `/etc/logrotate.d`.  You can view the file [here](https://github.com/influxdb/influxdb/blob/master/scripts/logrotate).
