content/influxdb/v1.0/administration/logs.md
---
title: Logs

menu:
  influxdb_1_0:
    weight: 10
    parent: administration
---

InfluxDB writes log output, by default, to `stderr`.
Depending on your use case, this log information can be written to another location.

## Running InfluxDB directly

If you run InfluxDB directly, using `influxd`, all logs will be written to `stderr`.
You may redirect this log output as you would any output to `stderr` like so:

```bash
influxd 2>$HOME/my_log_file
```

## Launched as a service

### sysvinit

If InfluxDB was installed using a pre-built package, and then launched
as a service, `stderr` is redirected to
`/var/log/influxdb/influxd.log`, and all log data will be written to
that file.  You can override this location by setting the variable
`STDERR` in the file `/etc/influxdb/influxdb.conf`.

>**Note:** On OS X the logs, by default, are stored in the file `/usr/local/var/log/influxdb.log`

For example, if `/etc/influxdb/influxdb.conf` contains:

```bash
STDERR=/dev/null
```

all log data will be discarded.  You can similarly direct output to
`stdout` by setting `STDOUT` in the same file.  Output to `stdout` is
sent to `/dev/null` by default when InfluxDB is launched as a service.

InfluxDB must be restarted to pick up any changes to `/etc/influxdb/influxdb.conf`.

### systemd

Starting with version 1.0, InfluxDB on systemd systems will no longer
write files to `/var/log/influxdb` by default, and will now use the
system configured default for logging (usually journald).  On most
systems, the logs will be directed to the systemd journal and can be
accessed with the command:

```
sudo journalctl -u influxdb.service
```

Please consult the systemd journald documentation for configuring
journald.

## Using logrotate

You can use [logrotate](http://manpages.ubuntu.com/manpages/hardy/man8/logrotate.8.html) to rotate the log files generated by InfluxDB on systems where logs are written to flat files.
If using the package install on a sysvinit system, the config file for logrotate is installed in `/etc/logrotate.d`.
You can view the file [here](https://github.com/influxdb/influxdb/blob/master/scripts/logrotate).
